--- a/Variational Inference.ipynb
+++ b/Variational Inference.ipynb
@@ -216,7 +216,7 @@
     "plot!(μsamps, λsamps, st=:scatter, alpha=0.2, label=\"Gibbs sampler\", markerstrokewidth=0.2, color=:green)\n",
     "p2 = plot(elbos, title=\"change of ELBO\", xlabel=\"iter\", ylabel=\"ELBO\", label=false, marker=:circle, markerstrokewidth=0, markersize=6)\n",
     "fig1 = plot(p1, p2, size=(1000, 400))\n",
-    "#savefig(fig1, \"figs-VI/fig1.png\")"
+    "savefig(fig1, \"figs-VI/fig1.png\")"
    ]
   },
   {
@@ -250,7 +250,7 @@
     "fig2 = plot(xs, pred1_var, title=\"variational prediction\", label=\"predictive\")\n",
     "plot!(xs, pred1, label=\"predictive(Gibbs)\")\n",
     "plot!(xs, mixture_normal_pdf, label=\"true\")\n",
-    "#savefig(fig2, \"figs-VI/fig2.png\")"
+    "savefig(fig2, \"figs-VI/fig2.png\")"
    ]
   },
   {
@@ -505,10 +505,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 0:00:21\u001b[39m\n",
+      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 0:00:22\u001b[39m\n",
       "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 0:00:20\u001b[39m\n",
-      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 0:00:19\u001b[39m\n",
-      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 0:00:19\u001b[39m\n",
+      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 0:00:18\u001b[39m\n",
+      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 0:00:18\u001b[39m\n",
       "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 0:00:18\u001b[39m\n",
       "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 0:00:18\u001b[39m\n",
       "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 0:00:18\u001b[39m\n",
@@ -546,13 +546,13 @@
    "source": [
     "#create the data\n",
     "Random.seed!(46)\n",
-    "N = 15\n",
+    "N = 14\n",
     "X = hcat(rand(Beta(1.1,3), 2, div(N,2)), rand(Beta(1.9,1.1), 2, div(N,2)))\n",
     "Y = vcat(vcat(ones(div(N,2)), zeros(div(N,2)))', vcat(zeros(div(N,2)), ones(div(N,2)))')\n",
     "\n",
     "#plot the data\n",
     "fig3 = plot_data(X, Y)\n",
-    "#savefig(fig3, \"figs-VI/fig3.png\")\n",
+    "savefig(fig3, \"figs-VI/fig3.png\")\n",
     "\n",
     "#initialize the parameters\n",
     "Random.seed!(42)\n",
@@ -589,96 +589,8 @@
     "\n",
     "#plot the result\n",
     "fig4 = plot_prob_1(X, Y, x->ppred(x, wsamps), \"prediction: variational inference\")\n",
-    "#savefig(fig4, \"figs-VI/fig4.png\")"
+    "savefig(fig4, \"figs-VI/fig4.png\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70d6e817",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b49a93c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ee18d88b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "222ec587",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "518a4a6e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f8948f4f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d8755839",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4ff25f61",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "097c2ca8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6c85ab56",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "287b4a9f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
