--- a/Variational Inference.ipynb
+++ b/Variational Inference.ipynb
@@ -216,7 +216,7 @@
     "plot!(μsamps, λsamps, st=:scatter, alpha=0.2, label=\"Gibbs sampler\", markerstrokewidth=0.2, color=:green)\n",
     "p2 = plot(elbos, title=\"change of ELBO\", xlabel=\"iter\", ylabel=\"ELBO\", label=false, marker=:circle, markerstrokewidth=0, markersize=6)\n",
     "fig1 = plot(p1, p2, size=(1000, 400))\n",
-    "savefig(fig1, \"figs-VI/fig1.png\")"
+    "#savefig(fig1, \"figs-VI/fig1.png\")"
    ]
   },
   {
@@ -250,7 +250,7 @@
     "fig2 = plot(xs, pred1_var, title=\"variational prediction\", label=\"predictive\")\n",
     "plot!(xs, pred1, label=\"predictive(Gibbs)\")\n",
     "plot!(xs, mixture_normal_pdf, label=\"true\")\n",
-    "savefig(fig2, \"figs-VI/fig2.png\")"
+    "#savefig(fig2, \"figs-VI/fig2.png\")"
    ]
   },
   {
@@ -552,7 +552,7 @@
     "\n",
     "#plot the data\n",
     "fig3 = plot_data(X, Y)\n",
-    "savefig(fig3, \"figs-VI/fig3.png\")\n",
+    "#savefig(fig3, \"figs-VI/fig3.png\")\n",
     "\n",
     "#initialize the parameters\n",
     "Random.seed!(42)\n",
@@ -589,7 +589,7 @@
     "\n",
     "#plot the result\n",
     "fig4 = plot_prob_1(X, Y, x->ppred(x, wsamps), \"prediction: variational inference\")\n",
-    "savefig(fig4, \"figs-VI/fig4.png\")"
+    "#savefig(fig4, \"figs-VI/fig4.png\")"
    ]
   }
  ],
