--- a/Expectation Propagation.ipynb
+++ b/Expectation Propagation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3aafabf2",
+   "id": "7e7b150f",
    "metadata": {},
    "source": [
     "# Expectation Propagation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c0dcb59",
+   "id": "daf823ef",
    "metadata": {},
    "source": [
     "## 0. Initialize"
@@ -18,8 +18,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "864f6187",
+   "execution_count": 1,
+   "id": "8dcf59ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9ad4d2d",
+   "id": "30379be8",
    "metadata": {},
    "source": [
     "## 1. create data"
@@ -50,8 +50,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "f8b4ede3",
+   "execution_count": 2,
+   "id": "fb240008",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "092601f0",
+   "id": "523a7198",
    "metadata": {},
    "source": [
     "## 2. define functions"
@@ -95,8 +95,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "78bd1f69",
+   "execution_count": 3,
+   "id": "823714d9",
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        "myEP (generic function with 1 method)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,14 +124,7 @@
     "#normalizing\n",
     "calcZn(xn,mtmp,ssqtmp,a,μ2,σsq2) = a*npdf(xn,mtmp,ssqtmp+1) + (1-a)*npdf(xn,μ2,σsq2)\n",
     "\n",
-    "#moment matching \n",
-    "function moment_matching0(mtmp,ssqtmp)\n",
-    "    m = mtmp/(ssqtmp+1)\n",
-    "    ssq = ssqtmp/(ssqtmp+1)\n",
-    "    return m,ssq\n",
-    "end\n",
-    "\n",
-    "function moment_matchingn(xn,mtmp,ssqtmp,a,Zn,μ2,σsq2)\n",
+    "function moment_matching(xn,mtmp,ssqtmp,a,Zn,μ2,σsq2)\n",
     "    m = (a*npdf(xn,mtmp,ssqtmp+1)*((ssqtmp*xn+mtmp)/(ssqtmp+1)) + (1-a)*npdf(xn,μ2,σsq2)*mtmp)/Zn\n",
     "    ssq = (a*npdf(xn,mtmp,ssqtmp+1)*(ssqtmp/(ssqtmp+1)) + (1-a)*npdf(xn,μ2,σsq2)*ssqtmp)/Zn\n",
     "    return m,ssq\n",
@@ -159,7 +152,7 @@
     "        for n in 1:N\n",
     "            mtmp, ssqtmp = update_params_except_n(m, ssq, mns[n], ssqns[n])\n",
     "            Zn = calcZn(X[n],mtmp,ssqtmp,a,μ2,σsq2)\n",
-    "            m,ssq = moment_matchingn(X[n],mtmp,ssqtmp,a,Zn,μ2,σsq2)\n",
+    "            m,ssq = moment_matching(X[n],mtmp,ssqtmp,a,Zn,μ2,σsq2)\n",
     "            mns[n],ssqns[n] = update(m,ssq,mtmp,ssqtmp)\n",
     "        end\n",
     "    end\n",
@@ -168,9 +161,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "24d1c4f6",
+   "metadata": {},
+   "source": [
+    "## 3. Estimate posterior and predictive"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "e9aab3d1",
+   "execution_count": 4,
+   "id": "d37a6233",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +188,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.090732 seconds (211.69 k allocations: 12.410 MiB, 99.82% compilation time)\n",
+      "  1.603366 seconds (3.90 M allocations: 203.303 MiB, 3.33% gc time, 99.99% compilation time)\n",
       "posterior mean=1.788, posterior var=0.38\n"
      ]
     }
