--- a/Conjugate-Gradient.ipynb
+++ b/Conjugate-Gradient.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d2870290",
+   "id": "8aa58e61",
    "metadata": {},
    "source": [
     "# Conjugate Gradient Method"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdc993e2",
+   "id": "504c4571",
    "metadata": {},
    "source": [
     "## 0. Initialize"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9df26c83",
+   "id": "f29b9465",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40f461a3",
+   "id": "68414ad7",
    "metadata": {},
    "source": [
     "## 1. Define functions"
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "eed5c2d5",
+   "id": "af2cefea",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae9f95f3",
+   "id": "79577610",
    "metadata": {},
    "source": [
     "## 2. Example"
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9c541c12",
+   "id": "778d4487",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a25a2011",
+   "id": "b82eb5df",
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
     "Random.seed!(42)\n",
     "n = 2000\n",
     "M = randn(n, n)\n",
-    "A = M'*M\n",
+    "A = transpose(M) * M\n",
     "x_true = rand(-5:5, n)\n",
     "b = A*x_true\n",
     "\n",
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ad6eb7ff",
+   "id": "397db834",
    "metadata": {},
    "outputs": [
     {
